(button text )bug fix
borra el texto de los botones, sino aparece un bug que
el texto de los botones en el campo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
             <div class="line">
                 _________
             </div>
-            <ul class="tarea letter" id="tareaCompletada"></ul>
+            <div class="subcontainer">
+                <div class="lett">Completed</div>
+                <ul class="tarea letter" id="tareaCompletada"></ul>
+            </div>
+
 
 		</div>
         <script type="text/javascript" src="./func.js"></script>
