--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         </header>
         <div class="container">
 			<ul class="tarea letter" id="tarea"></ul>
-            <div class="line">
+            <!--div class="line">
                 _________
             </div>
             <div class="subcontainer">
                 <div class="lett">Completed</div>
                 <ul class="tarea letter" id="tareaCompletada"></ul>
-            </div>
+            </div-->
 
 
 		</div>
